--- a/package.json
+++ b/package.json
@@ -22,22 +22,11 @@
   "homepage": "https://github.com/donbasta/leetcode-submission-scraper-bot#readme",
   "devDependencies": {
     "@types/dotenv": "^8.2.3",
-    "@types/node": "^22.9.0",
-    "@types/random-useragent": "^0.3.3",
-    "@types/user-agents": "^1.0.4",
-    "antibotbrowser": "^2.0.0",
-    "prettier": "^3.3.3"
+    "@types/node": "^22.9.0"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
-    "puppeteer": "^23.7.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-adblocker": "^2.13.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "puppeteer-real-browser": "^1.3.17",
-    "random-useragent": "^0.5.0",
-    "user-agents": "^1.1.349"
+    "prettier": "^3.3.3",
+    "puppeteer": "^23.7.0"
   }
 }
